# scbamsplit

./: .gitignore  CMakeLists.txt  LICENSE  NEWS.md  README.md  hash.c  hash.h  main.c  shared_const.h  usage.txt  uthash.h  utils.c  utils.h
src/: hash.c  hash.h  main.c  shared_const.h  sort.c  sort.h  thread_pool.c  thread_pool.h  utils.c  utils.h
